# historyBookLLM

./: .env.example  .gitignore  CHAT_SERVICE_COMPLETE.md  CLAUDE.md  LICENSE  README.md  VECTORIZATION_FIXES.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  test_api.py  test_clean_sync.py  test_full_integration.py  test_langgraph_comparison.py
.claude/commands/: update-docs.md
.github/workflows/: ci.yml
archive/obsolete_notebooks/: pdf_processing.ipynb  weaviate_testing.ipynb
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  USAGE.md
docs/examples/: agent_api_usage.md
docs/plans/: CLAUDE_MD_DOCUMENTATION_PLAN.md  kg_explorer_spec.md  kg_explorer_spec_add_metrics.md  langgraph_rag_implementation_plan.md  langgraph_rag_progress.md  long_term_feature_roadmap.md  pairwise_evaluation_implementation_plan.md  pairwise_evaluation_implementation_plan_20251127.md  phase_1_implementation_complete.md  phase_2_implementation_complete.md  phase_2_tickets.md  phase_2b_refactor_complete.md  short_term_agent_tools_plan.md
examples/: chat_service_demo.py
frontend/: CLAUDE.md  README.md  frontend_graph.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BookSelector.tsx  ChapterView.tsx  MessageInput.tsx  MessageList.tsx  SessionDropdown.tsx
frontend/src/hooks/: useChat.ts  useKGQueries.ts
frontend/src/pages/: BookPage.tsx  ChatPage.tsx  KGPage.tsx
frontend/src/services/: agentAPI.ts  api.ts  kgAPI.ts
frontend/src/store/: graphSlice.ts  index.ts  metricsSlice.ts
frontend/src/types/: agent.ts  index.ts  kg.ts
notebooks/: BuildEvalDataset.ipynb  chat_service_demo.ipynb  check_repo_interface.py  eval_dataset_queries.csv  investigate_reranker_cutoff.ipynb  investigate_vector_search_cutoff.ipynb  kg_schema_exploration.ipynb  paragraph_stats.ipynb  paragraph_vector_eda.py  pdf_processing.ipynb  retrieval_relevance_evaluations.csv  retrieval_relevance_evaluations_user_queries.csv  verify_kg_repo.ipynb  weaviate_testing.ipynb
notebooks/kg_experiment/: book3_chapter4_paragraphs.json  extract_and_visualize_kg.py  extraction_all_paragraphs.json  extraction_paragraph1_initial.json  kg_experiment_v2.ipynb  kg_normalization_analysis.ipynb  kg_normalization_analysis_cos_and_lev.ipynb  kg_normalization_analysis_lev.ipynb  kg_schema_exploration.ipynb  llm_normalization_results.csv  llm_normalization_results_cos_and_lev.csv  llm_normalization_results_cos_and_lev_2.csv  llm_normalization_results_levenshtein.csv  selected_5_paragraphs.json
scripts/: book_ingestion.py  delete_collections.py  demo_repository_interface.py  demo_simplified_architecture.py  inspect_and_clear_database.py  manage_collections.py  reset_kg_collections.py  run_book_ingestion.py  run_evals.py  run_ingestion.py  run_kg_extraction.py  run_modern_ingestion.py  setup_development_config.py  setup_test_config.py  switch_environment.py  visualize_kg.py
scripts/kg_experiments/: display_sample_paragraphs.py  get_rome_chapter_paragraphs.py
scripts/verify/: benchmark_langgraph.py  verify_api.py  verify_integration.py
src/history_book/: test.py
src/history_book/api/: CLAUDE.md  __init__.py  main.py
src/history_book/chains/: CLAUDE.md  __init__.py  kg_extraction_chain.py  kg_merge_chain.py  kg_temporal_chain.py  rag_chain.py  (+2 more)
(+95 files in other folders)
