[tool.poetry]
name = "history_book"
version = "0.1.0"
description = ""
authors = ["Christopher Burke <imcjb8@gmail.com>"]
readme = "README.md"
packages = [{ include = "history_book", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pymupdf = ">=1.25.5,<2.0.0"
unstructured = ">=0.17.2,<0.18.0"
tiktoken = "^0.9.0"
weaviate-client = "^4.15.0"
pandas = "^2.3.0"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
